Fixed issues with timer not started because placeholder null